buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"
apply plugin: "org.spongepowered.mixin"
apply plugin: "org.parchmentmc.librarian.forgegradle"

repositories {
    jcenter()
    mavenCentral()
    flatDir {
        dirs "libs"
    }
    maven {
        url = "https://libraries.minecraft.net/"
    }
    maven {
        url = "https://maven.minecraftforge.net/"
    }
    maven {
        url = "https://repo.spongepowered.org/maven"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        url = "https://maven.hellfiredev.net/"
    }
    maven {
        url = "https://maven.architectury.dev/"
    }
    maven {
        url = "https://maven.saps.dev/minecraft/"
    }
    maven {
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
    }
    maven {
        url = "https://nexus.covers1624.net/repository/cofh-releases/"
    }
    maven {
        url = "https://pkgs.dev.azure.com/Kotori316/minecraft/_packaging/mods/maven/v1/"
    }
    maven {
        url = "https://jenkins.bdew.net/maven/"
    }
    maven {
        url = "https://repo.repsy.io/mvn/klikli-dev/mods/"
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "4.2.2.3"
group = "thelm.jaopca"
archivesBaseName = "JAOPCA-1.19.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

eclipseJdtApt.enabled = false
eclipseFactoryPath.enabled = false

minecraft {
    mappings channel: "parchment", version: "2022.10.16-1.19.2"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.19.2-43.1.52"
    annotationProcessor "org.spongepowered:mixin:0.8.4:processor"

    implementation fg.deobf("mezz.jei:jei-1.19.2-forge:11.4.0.286")
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.19.2:10.0.16")
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.1.0")
    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-1.19:3.1.37")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.19.2-77")
    //implementation fg.deobf("slimeknights.mantle:Mantle:1.19-1.10.+")
    //implementation fg.deobf("com.teamcofh:cofh_core:1.19-1.7.+")
    implementation fg.deobf("dev.latvian.mods:rhino-forge:1902.2.2-build.264")
    implementation fg.deobf("dev.architectury:architectury-forge:6.3.49")
    implementation fg.deobf("dev.ftb.mods:ftb-library-forge:1902.3.10-build.156") {
        transitive = false
    }
    implementation("com.kotori316:scalablecatsforce:2.13.8-build-8:with-library") {
        transitive = false
    }
    implementation fg.deobf("net.bdew:bdlib:1.24.1.4-mc1.19.2")
    implementation fg.deobf("com.klikli_dev:modonomicon:1.19.2-1.11.0")
    implementation fg.deobf("dev.latvian.mods:kubejs-forge:1902.6.0-build.119") {
        transitive = false
    }
    implementation fg.deobf("net.darkhax.openloader:OpenLoader-Forge-1.19.2:15.0.1")
    implementation fg.deobf("blusunrize.immersiveengineering:ImmersiveEngineering:1.19.2-9.0.0-153")
    implementation fg.deobf("com.simibubi.create:create-1.19.2:0.5.0.f-15:all")
    //implementation fg.deobf("slimeknights.tconstruct:TConstruct:1.19-3.6.+")
    implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.5.474")
    implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.5.474:generators")
    implementation fg.deobf("dev.ftb.mods:ftb-industrial-contraptions:1900.1.7-build.212") {
        transitive = false
    }
    //implementation fg.deobf("com.teamcofh:thermal_foundation:1.19-1.7.+")
    //implementation fg.deobf("com.teamcofh:thermal_expansion:1.19-1.7.+")
    //implementation fg.deobf("redsnakegames.mcenderdragon:futurepack:1.19-34.+")
    implementation fg.deobf("net.bdew:factorium:1.4.0.3-mc1.19.2")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3759881")
    implementation fg.deobf("curse.maven:ato-405593:4046926")
    implementation fg.deobf("curse.maven:allthemodium-364466:4091080")
    implementation fg.deobf("curse.maven:electrodynamics-316867:4086209")
    implementation fg.deobf("curse.maven:voluminous-energy-416704:3943651")
    implementation fg.deobf("curse.maven:cyclops-core-232758:3929867")
    implementation fg.deobf("curse.maven:common-capabilities-247007:3929863")
    implementation fg.deobf("curse.maven:integrated-dynamics-236307:4077913")
    implementation fg.deobf("curse.maven:essentials-293752:4028458")
    implementation fg.deobf("curse.maven:crossroads-mc-250231:4083575")
    implementation fg.deobf("curse.maven:assemblylinemachines-388282:3964948")
    implementation fg.deobf("curse.maven:occultism-361026:4086102")
    implementation fg.deobf("curse.maven:cyclic-239286:4075141")
    implementation fg.deobf("curse.maven:industrial-reborn-358877:4076608")
    implementation fg.deobf("curse.maven:ic2-classic-242942:4060461")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "JAOPCA",
                "Specification-Vendor": "thelm",
                "Specification-Version": "4",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm",
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConnector": "thelm.jaopca.mixins.JAOPCAMixinConnector"
        ],)
    }
}

mixin {
    add sourceSets.main, "mixins.jaopca.refmap.json"
}
